bluec-tests/tests/invalid/types_bool/var_name.c
int main(void) {
    int _Bool = 5;
    return _Bool;
}